namespaces/ide/pod.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#creating-a-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ide
spec:
  selector:
    matchLabels:
      app: ide
  replicas: 1
  template: # create pods; pod template
    metadata:
      labels:
        app: ide
    spec:
      containers:
      - name: ide
# We overwrite forever with node since we want it to fail
# we had this issue with unreliable storage
# https://github.com/sapk/dockerfiles/blob/master/cloud9/Dockerfile.alpine
#        command: ["node", "/root/.c9/server.js", "-w", "/workspace", "--listen", "0.0.0.0"]
        args:
        - "--auth"
        #- ":" #cloud9
        - none #vscode
        #image: sapk/cloud9
        image: svlentink/code-server
        ports:
        - containerPort: 8181 #cloud9
        - containerPort: 8080 #vscode
        volumeMounts:
        - name: ide
          #mountPath: /workspace #cloud9
          mountPath: /home/coder/stateful #vscode
        securityContext: #vscode is by default non root
          allowPrivilegeEscalation: false
          runAsUser: 0
      - name: cdn
        image: svlentink/mywebsite
        imagePullPolicy: Always
        #ports:
        #- containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d
        - name: ide
          mountPath: /var/www/dev-fs.lent.ink
      volumes:
      - name: ide
        hostPath:
          path: /mnt/k8s/ide
#        persistentVolumeClaim:
#          claimName: ide-claim
      - name: nginx-conf
        hostPath:
          path: /mnt/k8s/ide/gits/www/nginx
