namespaces/ide/svc.yml
# https://kubernetes.io/docs/concepts/services-networking/connect-applications-service/#exposing-pods-to-the-cluster
apiVersion: v1
kind: Service
metadata:
  name: ide
#  namespace: default
spec:
  ports:
  - name: http
    #port: 8181 #cloud9
    port: 8080 #vscode
  - name: http
    port: 80
  selector:
    app: ide
