namespaces/ide/ing.yml
# https://kubernetes.github.io/ingress-nginx/examples/auth/basic/
# https://appscode.com/products/voyager/6.0.0-rc.0/guides/ingress/security/basic-auth/
# https://github.com/kubernetes/ingress-nginx/blob/master/docs/user-guide/nginx-configuration/annotations.md#authentication
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ide
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true" # needed for dev-fs host
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basicauth-webide
    nginx.ingress.kubernetes.io/auth-realm: 'Homework env. please login'
    nginx.ingress.kubernetes.io/rewrite-target: /
    # The following snippet prevents MITM proxies from spying
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($scheme = "http") { #without this, ACME challenges fail
        set $set_label_to_tls TLSv1.3;
      }
      set $tls_test "${ssl_protocol}${set_label_to_tls}";
      if ($tls_test != "TLSv1.3") {
        return 302 https://google.com/?q=enforce+browser+to+use+TLSv1.3+instead+of+$ssl_protocol;
      }
#      add_header DNT "1" always;
#      add_header Content-Type "text/javascript" always;
#      types {
#        text/javascript .mjs;
#      }
#      include mime.types;
#    nginx.ingress.kubernetes.io/configuration-snippet: |
spec:
  rules:
  - host: &ide-host dev.lent.ink
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ide
            port:
              #number: 8181 #cloud9
              number: 8080 #vscode
  - host: &fs-host dev-fs.lent.ink
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ide
            port:
              number: 80
  tls:
  - hosts:
    - *ide-host
    - *fs-host
    secretName: ide-tls
